--- a/Spotival/visuals/MainWindow.xaml
+++ b/Spotival/visuals/MainWindow.xaml
@@ -10,6 +10,10 @@
         ResizeMode="NoResize"
         MouseDown="Window_MouseDown"
         Title="MainWindow" Height="800" Width="1200" MinHeight="800" MinWidth="1200">
+    <Window.Resources>
+        <Image x:Key="Play" Source="../resources/play_icon_final.png" Height="50" Width="50" />
+        <Image x:Key="Stop" Source="../resources/pause_icon_final.png" Height="50" Width="50"/>
+    </Window.Resources>
     <Grid Margin="0,0,0,0" Background="#303030">
         <!--Menu de gauche-->
         <Grid HorizontalAlignment="Left" Height="800" VerticalAlignment="Top" Width="125">
@@ -26,11 +30,6 @@
             <Grid.Resources>
                 <Style TargetType="Button">
                     <Setter Property="Background" Value="#303030"/>
-                    <Style.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="Yellow"/>
-                        </Trigger>
-                    </Style.Triggers>
                 </Style>
             </Grid.Resources>
             <Button x:Name="btnHome" Click="SelectFunction" Margin="0,0,4,0" HorizontalAlignment="Right" Width="122" Grid.Row="0">
@@ -103,7 +102,6 @@
                         </Setter.Value>
                     </Setter>
                 </Style>
-
                 <ControlTemplate x:Key="Slider"  TargetType="Slider">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -149,9 +147,9 @@
             <Label x:Name="lblTime" Content="00:00:00" Margin="141,37,628,38" Grid.Column="2" Foreground="White"/>
             <Slider x:Name="progressSong" Style="{StaticResource Horizontal_Slider}" VerticalAlignment="Center" Margin="200,40,83,39" Grid.Column="2" Maximum="100"/>
             <MediaElement x:Name="mediaPlayer" UnloadedBehavior="Manual" LoadedBehavior="Manual"></MediaElement>
-            
-            <Button x:Name="btnPlayPause" Click="btnPlayPause_Click" Margin="92,30,690,29" Grid.Column="2" Background="Transparent" BorderThickness="0">
-                <Image Source="../resources/play_icon.png" Width="38"/>
+
+            <Button x:Name="btnPlayPause" Click="btnPlayPause_Click" Margin="95,31,689,30" Grid.Column="2" Padding="-5"  Background="Transparent" BorderThickness="0">
+                <DynamicResource ResourceKey="Stop"/>
             </Button>
             <Label x:Name="TotalTime" Content="00:00:00" Margin="745,36,24,40" Grid.Column="2" Foreground="White"/>
         </Grid>
