--- a/Spotival/visuals/MainWindow.xaml
+++ b/Spotival/visuals/MainWindow.xaml
@@ -145,7 +145,7 @@
             <Border BorderBrush="Gray" BorderThickness="1" Margin="66,0,0,99" Grid.RowSpan="2" Grid.Column="2"/>
 
             <Label x:Name="lblTime" Content="00:00:00" Margin="141,37,628,38" Grid.Column="2" Foreground="White"/>
-            <Slider x:Name="progressSong" Style="{StaticResource Horizontal_Slider}" VerticalAlignment="Center" Margin="200,40,83,39" Grid.Column="2" Maximum="100"/>
+            <Slider x:Name="progressSong" ValueChanged="progressSong_ValueChanged" IsMoveToPointEnabled="True" Style="{StaticResource Horizontal_Slider}" VerticalAlignment="Center" Margin="200,40,83,39" Grid.Column="2" Maximum="100"/>
             <MediaElement x:Name="mediaPlayer" UnloadedBehavior="Manual" LoadedBehavior="Manual"></MediaElement>
 
             <Button x:Name="btnPlayPause" Click="btnPlayPause_Click" Margin="95,31,689,30" Grid.Column="2" Padding="-5"  Background="Transparent" BorderThickness="0">
