--- a/Spotival/visuals/MainWindow.xaml
+++ b/Spotival/visuals/MainWindow.xaml
@@ -8,52 +8,68 @@
         WindowStyle="None"
         ShowInTaskbar="True"
         ResizeMode="NoResize"
+        Topmost="True"
+        WindowStartupLocation="CenterScreen"
         MouseDown="Window_MouseDown"
         Title="MainWindow" Height="800" Width="1200" MinHeight="800" MinWidth="1200">
     <Window.Resources>
         <Image x:Key="Play" Source="../resources/play_icon_final.png" Height="50" Width="50" />
         <Image x:Key="Stop" Source="../resources/pause_icon_final.png" Height="50" Width="50"/>
+
+        <ImageBrush x:Key="tb_mouse_over" ImageSource="../resources/menu_ligne.png"/>
+
+        <Style x:Key="font_style" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Fonts/Roboto-Light.ttf #Roboto"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style>
+
+        <Style TargetType="ToolTip" x:Key="tt_style">
+            <Setter Property="Placement" Value="Right"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Width" Value="100"/>
+            <Setter Property="Margin" Value="20,0,0,0"/>
+            <Setter Property="Background" Value="#4A5668"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontFamily" Value="Fonts/Roboto-Light.ttf #Roboto"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="PlacementRectangle" Value="60,0,0,0"/>
+            <Setter Property="HorizontalOffset" Value="15"/>
+            <Setter Property="VerticalOffset" Value="6"/>
+            <Setter Property="HasDropShadow" Value="True"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        </Style>
+
+        <Style x:Key="tb_style" TargetType="{x:Type ToggleButton}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ToggleButton}">
+                        <Border x:Name="border" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" TargetName="border" Value="{StaticResource tb_mouse_over}"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource tb_mouse_over}"/>
+                            </Trigger>
+                            <Trigger Property="IsChecked" Value="True">
+                                <Setter Property="Background" TargetName="border" Value="{StaticResource tb_mouse_over}"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource tb_mouse_over}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
     <Grid Margin="0,0,0,0" Background="#303030">
-        <!--Menu de gauche-->
-        <Grid HorizontalAlignment="Left" Height="800" VerticalAlignment="Top" Width="125">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="125"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-            </Grid.RowDefinitions>
-            <Grid.Resources>
-                <Style TargetType="Button">
-                    <Setter Property="Background" Value="#303030"/>
-                </Style>
-            </Grid.Resources>
-            <Button x:Name="btnHome" Click="SelectFunction" Margin="0,0,4,0" HorizontalAlignment="Right" Width="122" Grid.Row="0">
-                <Image Source="..\resources\home.png" Width="60"></Image>
-            </Button>
-            <Button x:Name="btnDeezer" Click="SelectFunction" Margin="0,0,4,0" HorizontalAlignment="Right" Width="122" Grid.Row="1">
-                <Image Source="..\resources\deezer_white.png" Width="60"></Image>
-            </Button>
-            <Button x:Name="btnSpotify" Click="SelectFunction" Margin="0,0,4,0" HorizontalAlignment="Right" Width="122" Grid.Row="2">
-                <Image Source="..\resources\spotify_white.png" Width="60"></Image>
-            </Button>
-            <Button x:Name="btnExplorer" Click="SelectFunction" Margin="0,0,4,0" HorizontalAlignment="Right" Width="122" Grid.Row="3">
-                <Image Source="..\resources\explorer_white.png" Width="60"></Image>
-            </Button>
-            <Button x:Name="btnSettings" Click="SelectFunction" Margin="0,0,4,0" HorizontalAlignment="Right" Width="122" Grid.Row="4">
-                <Image Source="..\resources\settings.png" Width="60"></Image>
-            </Button>
-        </Grid>
-        <Grid Height="101" Margin="120,699,2,0" VerticalAlignment="Top">
+        <Grid x:Name="GridLecture" Margin="65,699,2,0" Height="101" VerticalAlignment="Top">
             <!--Grid de lecture-->
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="195"/>
-                <ColumnDefinition Width="60"/>
-                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="938"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"/>
@@ -136,24 +152,28 @@
                     </Style.Triggers>
                 </Style>
             </Grid.Resources>
+            <Border BorderThickness="1" Margin="6,0,101,0">
+                <Image x:Name="CoverSong" Source="../resources/album.jpg" />
+                <Border.Effect>
+                    <DropShadowEffect BlurRadius="5" ShadowDepth="0" Direction="-90" Color="White"/>
+                </Border.Effect>
+            </Border>
+            <TextBlock x:Name="txtTitle" FontSize="15" Grid.Row="0" Margin="100,30,762,49" Grid.ColumnSpan="2" Foreground="White"></TextBlock>
+            <TextBlock x:Name="txtArtist" Margin="100,56,762,21" Foreground="gray" Grid.ColumnSpan="2"></TextBlock>
 
-            <Border BorderBrush="gray" BorderThickness="1" Margin="0,0,757,99" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3"/>
-            <Image x:Name="CoverSong" Source="../resources/album.jpg" Margin="10,11,106,9"/>
-            <TextBlock x:Name="txtTitle" FontSize="15" Grid.Row="0" Margin="94,30,762,49" Grid.ColumnSpan="3" Foreground="White"></TextBlock>
-            <TextBlock x:Name="txtArtist" Margin="94,56,762,21" Foreground="gray" Grid.ColumnSpan="3"></TextBlock>
+            <Border BorderBrush="Gray" BorderThickness="1" Grid.Column="1" Margin="133,0,0,99" Grid.RowSpan="2"/>
 
-            <Border BorderBrush="Gray" BorderThickness="1" Margin="66,0,0,99" Grid.RowSpan="2" Grid.Column="2"/>
+            <Label x:Name="lblTime" Content="00:00:00" Margin="247,37,637,38" Grid.Column="1" Foreground="White"/>
+            <Slider x:Name="progressSong" ValueChanged="progressSong_ValueChanged" IsMoveToPointEnabled="True" Style="{StaticResource Horizontal_Slider}" VerticalAlignment="Center" Margin="311,40,83,39" Grid.Column="1" Maximum="100" Height="21"/>
+            <MediaElement x:Name="mediaPlayer" UnloadedBehavior="Manual" LoadedBehavior="Manual" Grid.ColumnSpan="2" Margin="161,-149,722,149"></MediaElement>
+            <Border BorderBrush="gray" BorderThickness="1" Margin="0,0,805,99" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
 
-            <Label x:Name="lblTime" Content="00:00:00" Margin="141,37,628,38" Grid.Column="2" Foreground="White"/>
-            <Slider x:Name="progressSong" ValueChanged="progressSong_ValueChanged" IsMoveToPointEnabled="True" Style="{StaticResource Horizontal_Slider}" VerticalAlignment="Center" Margin="200,40,83,39" Grid.Column="2" Maximum="100"/>
-            <MediaElement x:Name="mediaPlayer" UnloadedBehavior="Manual" LoadedBehavior="Manual"></MediaElement>
-
-            <Button x:Name="btnPlayPause" Click="btnPlayPause_Click" Margin="95,31,689,30" Grid.Column="2" Padding="-5"  Background="Transparent" BorderThickness="0">
+            <Button x:Name="btnPlayPause" Click="btnPlayPause_Click" Margin="176,31,723,30" Grid.Column="1" Padding="-5"  Background="Transparent" BorderThickness="0">
                 <DynamicResource ResourceKey="Stop"/>
             </Button>
-            <Label x:Name="TotalTime" Content="00:00:00" Margin="745,36,24,40" Grid.Column="2" Foreground="White"/>
+            <Label x:Name="TotalTime" Content="00:00:00" Margin="860,36,24,39" Grid.Column="1" Foreground="White"/>
         </Grid>
-        <Frame x:Name="mainFrame" Margin="120,0,0,101" NavigationUIVisibility="Hidden" JournalOwnership="OwnsJournal"/>
+        <Frame x:Name="mainFrame" Margin="65,0,0,101" NavigationUIVisibility="Hidden" JournalOwnership="OwnsJournal"/>
         <!--Frame de navigation-->
         <Grid HorizontalAlignment="Left" Height="33" Margin="1090,10,0,0" VerticalAlignment="Top" Width="100">
             <!--close, mini, maxi-->
@@ -179,6 +199,121 @@
             <Button x:Name="btnMinimize" Click="MinimizeWindow" Grid.Column="0" BorderBrush="Transparent">
                 <Image Source="..\resources\minimize.png"></Image>
             </Button>
+        </Grid>
+
+        <!--Menu de gauche-->
+        <Grid x:Name="nav_pnl" HorizontalAlignment="Left" Width="65" Background="#2E333A">
+            <StackPanel x:Name="st_pnl">
+                <Grid Height="90">
+                    <TextBlock Grid.Row="1" Grid.Column="0" Margin="73,-20,0,0" Text="M E N U" Foreground="White" FontSize="22" Background="Transparent" 
+                               HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource font_style}">
+                        <TextBlock.Effect>
+                            <DropShadowEffect BlurRadius="10" ShadowDepth="1" Direction="-90" Color="White"/>
+                        </TextBlock.Effect>
+                    </TextBlock>
+
+                    <ToggleButton x:Name="tg_btn" Unchecked="tg_btn_Unchecked" Checked="tg_btn_Checked" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="18,-20,0,0" Height="30" Width="30"  BorderThickness="0" Style="{StaticResource tb_style}">
+                        <ToggleButton.Background>
+                            <ImageBrush ImageSource="..\resources\menu_rond.png" Stretch="Fill"/>
+                        </ToggleButton.Background>
+                        <ToggleButton.Triggers>
+                            <EventTrigger RoutedEvent="ToggleButton.Unchecked">
+                                <BeginStoryboard>
+                                    <Storyboard x:Name="HideStackPanel">
+                                        <DoubleAnimation Storyboard.TargetName="nav_pnl" Storyboard.TargetProperty="Width" BeginTime="0:0:0" From="230" To="65" Duration="0:0:0.2"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                            <EventTrigger RoutedEvent="ToggleButton.Checked">
+                                <BeginStoryboard>
+                                    <Storyboard x:Name="ShowStackPanel">
+                                        <DoubleAnimation Storyboard.TargetName="nav_pnl" Storyboard.TargetProperty="Width" BeginTime="0:0:0" From="65" To="230" Duration="0:0:0.3"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </ToggleButton.Triggers>
+                    </ToggleButton>
+                </Grid>
+
+                <ListView x:Name="ListViewMenu" Background="Transparent" BorderBrush="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListViewItem}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                        <Border x:Name="Bd" Height="50" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True" Padding="{TemplateBinding Property=Padding}">
+                                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <MultiTrigger>
+                                                <MultiTrigger.Conditions>
+                                                    <Condition Property="IsMouseOver" Value="True"/>
+                                                </MultiTrigger.Conditions>
+                                                <Setter Property="Background" TargetName="Bd" Value="#404D5B"/>
+                                                <Setter Property="BorderBrush" TargetName="Bd" Value="#404D5B"/>
+                                            </MultiTrigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListViewItem_MouseLeftButtonDown" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListViewItem MouseEnter="ListViewItem_MouseEnter" HorizontalAlignment="Left" Margin="0,0,0,15">
+                        <ListViewItem.ToolTip>
+                            <ToolTip x:Name="tt_home" Content="Home" Style="{StaticResource tt_style}"/>
+                        </ListViewItem.ToolTip>
+                        <StackPanel x:Name="SPHome" Orientation="Horizontal" Width="230">
+                            <Image Source="../resources/home.png" Stretch="Fill" Margin="6,0,0,0" Width="40" Height="40"/>
+                            <TextBlock Text="Accueil" Margin="25,0,0,0" Style="{StaticResource font_style}"/>
+                        </StackPanel>
+                    </ListViewItem>
+
+                    <!--DEEZER-->
+                    <ListViewItem MouseEnter="ListViewItem_MouseEnter" HorizontalAlignment="Left" Margin="0,0,0,15">
+                        <ListViewItem.ToolTip>
+                            <ToolTip x:Name="tt_deezer" Content="Deezer" Style="{StaticResource tt_style}"/>
+                        </ListViewItem.ToolTip>
+                        <StackPanel x:Name="SPDeezer" Orientation="Horizontal" Width="230">
+                            <Image Source="../resources/deezer_color.png" Stretch="Fill" Margin="6,0,0,0" Width="40" Height="40"/>
+                            <TextBlock Text="Deezer" Margin="25,0,0,0" Style="{StaticResource font_style}"/>
+                        </StackPanel>
+                    </ListViewItem>
+
+                    <!--SPOTIFY-->
+                    <ListViewItem MouseEnter="ListViewItem_MouseEnter" HorizontalAlignment="Left" Margin="0,0,0,15">
+                        <ListViewItem.ToolTip>
+                            <ToolTip x:Name="tt_spotify" Content="Spotify" Style="{StaticResource tt_style}"/>
+                        </ListViewItem.ToolTip>
+                        <StackPanel x:Name="SPSpotify" Orientation="Horizontal" Width="230">
+                            <Image Source="../resources/spotify_green.png" Stretch="Fill" Margin="6,0,0,0" Width="40" Height="40"/>
+                            <TextBlock Text="Spotify" Margin="25,0,0,0" Style="{StaticResource font_style}"/>
+                        </StackPanel>
+                    </ListViewItem>
+
+                    <!--EXPLORER-->
+                    <ListViewItem MouseEnter="ListViewItem_MouseEnter" HorizontalAlignment="Left" Margin="0,0,0,15">
+                        <ListViewItem.ToolTip>
+                            <ToolTip x:Name="tt_explorer" Content="Explorateur" Style="{StaticResource tt_style}"/>
+                        </ListViewItem.ToolTip>
+                        <StackPanel x:Name="SPExplorer" Orientation="Horizontal" Width="230">
+                            <Image Source="../resources/windows.png" Stretch="Fill" Margin="6,0,0,0" Width="40" Height="40"/>
+                            <TextBlock Text="Explorateur" Margin="25,0,0,0" Style="{StaticResource font_style}"/>
+                        </StackPanel>
+                    </ListViewItem>
+
+                    <!--SETTINGS-->
+                    <ListViewItem MouseEnter="ListViewItem_MouseEnter" HorizontalAlignment="Left" Margin="0,0,0,15">
+                        <ListViewItem.ToolTip>
+                            <ToolTip x:Name="tt_settings" Content="Paramètres" Style="{StaticResource tt_style}"/>
+                        </ListViewItem.ToolTip>
+                        <StackPanel x:Name="SPSettings" Orientation="Horizontal" Width="230">
+                            <Image Source="../resources/settings_gray.png" Stretch="Fill" Margin="6,0,0,0" Width="40" Height="40"/>
+                            <TextBlock Text="Paramètres" Margin="25,0,0,0" Style="{StaticResource font_style}"/>
+                        </StackPanel>
+                    </ListViewItem>
+                </ListView>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
