--- a/Spotival/visuals/ExplorerWindow.xaml
+++ b/Spotival/visuals/ExplorerWindow.xaml
@@ -59,6 +59,25 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <ControlTemplate x:Key="TextBoxBaseControlTemplate" TargetType="{x:Type TextBoxBase}">
+            <Border Background="{TemplateBinding Background}" 
+                x:Name="Bd" BorderBrush="White"
+                BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="10">
+                <ScrollViewer x:Name="PART_ContentHost"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" TargetName="Bd"/>
+                    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                </Trigger>
+                <Trigger Property="Width" Value="Auto">
+                    <Setter Property="MinWidth" Value="100"/>
+                </Trigger>
+                <Trigger Property="Height" Value="Auto">
+                    <Setter Property="MinHeight" Value="20"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
     </Page.Resources>
     <Grid x:Name="GridPage">
         <Separator BorderBrush="Gray" Height="100" Margin="456,-27,574,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
@@ -121,14 +140,16 @@
             <Image Source="../resources/plus_icon.png" Height="15" Width="15"/>
         </Button>
         <TextBlock Margin="557,6,446,0" Foreground="White" VerticalAlignment="Top">Rechercher :</TextBlock>
-        <TextBox x:Name="txtSearch" BorderBrush="Gray" FontSize="11" VerticalContentAlignment="Center" Background="#2E333A" Foreground="White" HorizontalAlignment="Left" 
+        <TextBox x:Name="txtSearch" Template="{StaticResource TextBoxBaseControlTemplate}" FontSize="11" Background="#2E333A" VerticalContentAlignment="Center" HorizontalAlignment="Left" 
                  Height="19" Margin="557,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="386" RenderTransformOrigin="0.5,0.5"/>
         <Button Margin="943,22,175,0" Name="btnSearchSong" Click="btnSearchSong_Click" Background="Gray" BorderThickness="0" VerticalAlignment="Top" VerticalContentAlignment="Center" RenderTransformOrigin="12.783,-11.5" Height="19">
             <Image Source="../resources/fleche_droite.png" Height="19" Width="15"/>
         </Button>
-        <TextBox x:Name="txtDestination" BorderBrush="Gray" FontSize="11" VerticalContentAlignment="Center" Background="#2E333A" Foreground="White" HorizontalAlignment="Left" 
+        <TextBox x:Name="txtDestination" Template="{StaticResource TextBoxBaseControlTemplate}" FontSize="11" VerticalContentAlignment="Center" Background="#2E333A" HorizontalAlignment="Left" 
             Height="19" Margin="10,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="387" RenderTransformOrigin="0.5,0.5"/>
-        <Button x:Name="btnStinationFolder" Margin="402,22,674,0" Click="NavigateFolder" Content="Parcourir" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Top" Height="19"></Button>
+        <Button x:Name="btnDestinationFolder" Margin="401,19,708,0" Background="Transparent" Click="NavigateFolder" HorizontalContentAlignment="Center" BorderThickness="0" VerticalContentAlignment="Center" VerticalAlignment="Top" Height="25" >
+            <Image Source="../resources/parcourir.png" Height="23" Width="24"/>
+        </Button>
         <TextBlock Margin="10,6,928,0" Foreground="White" VerticalAlignment="Top" Text="Dossier de destination :"/>
     </Grid>
 </Page>
