--- a/Spotival/visuals/HomeWindow.xaml
+++ b/Spotival/visuals/HomeWindow.xaml
@@ -7,17 +7,18 @@
          mc:Ignorable="d" 
          d:DesignHeight="800" d:DesignWidth="1025">
     <Grid>
-        <Grid.Background>
+        <!--<Grid.Background>
             <ImageBrush ImageSource="../resources/vinyle.png"  Stretch="UniformToFill"/>
-        </Grid.Background>
+        </Grid.Background>-->
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="500"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="300"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Text="Bienvenue" Margin="64,210,116,18" FontFamily="Digitalt" FontSize="55" Foreground="White" FontWeight="Bold" TextAlignment="Center"/>
+        <Image Source="../resources/welcome.png" Margin="280,10,-280,-10"/>
+        <!--<TextBlock Text="Bienvenue" Margin="64,210,116,18" FontFamily="Digitalt" FontSize="55" Foreground="White" FontWeight="Bold" TextAlignment="Center"/>
         <TextBlock Text="sur" Margin="64,324,116,-82" FontFamily="Digitalt" FontSize="55" Foreground="White" FontWeight="Bold" TextAlignment="Center"/>
-        <TextBlock Text="Spotival" Margin="64,440,116,-210" FontFamily="Digitalt" FontSize="55" Foreground="White" FontWeight="Bold" TextAlignment="Center"/>
+        <TextBlock Text="Spotival" Margin="64,440,116,-210" FontFamily="Digitalt" FontSize="55" Foreground="White" FontWeight="Bold" TextAlignment="Center"/>-->
     </Grid>
 </Page>
