--- a/Spotival/visuals/ExplorerWindow.xaml
+++ b/Spotival/visuals/ExplorerWindow.xaml
@@ -78,9 +78,83 @@
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
+        <Style x:Key="ScrollThumbs" TargetType="{x:Type Thumb}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Grid x:Name="Grid">
+                            <Rectangle HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" Height="Auto" Fill="Transparent"/>
+                            <Border x:Name="Rectangle1" CornerRadius="10" HorizontalAlignment="Stretch"
+                                    VerticalAlignment="Stretch" Width="Auto" Height="Auto"
+                                    Background="{TemplateBinding Background}" BorderBrush="White"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="Tag" Value="Horizontal">
+                                <Setter TargetName="Rectangle1" Property="Width" Value="Auto"/>
+                                <Setter TargetName="Rectangle1" Property="Height" Value="7"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
+            <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+            <Setter Property="Foreground" Value="#2E333A"/>
+            <Setter Property="Background" Value="DarkGray"/>
+            <Setter Property="Width" Value="10"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ScrollBar}">
+                        <Grid x:Name="GridRoot" Width="12" Background="{x:Null}">
+                            <Track x:Name="PART_Track" Grid.Row="0" IsDirectionReversed="true" Focusable="False">
+                                <Track.Thumb>
+                                    <Thumb x:Name="Thumb" Background="{TemplateBinding Foreground}" Style="{DynamicResource ScrollThumbs}"/>
+                                </Track.Thumb>
+                                <Track.IncreaseRepeatButton>
+                                    <RepeatButton x:Name="PageUp" Command="ScrollBar.PageDownCommand" Opacity="0" Focusable="False"/>
+                                </Track.IncreaseRepeatButton>
+                                <Track.DecreaseRepeatButton>
+                                    <RepeatButton x:Name="PageDown" Command="ScrollBar.PageUpCommand" Opacity="0" Focusable="False"/>
+                                </Track.DecreaseRepeatButton>
+                            </Track>
+                        </Grid>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger SourceName="Thumb" Property="IsMouseOver" Value="true">
+                                <Setter Value="{DynamicResource ButtonSelectBrush}" TargetName="Thumb" Property="Background"/>
+                            </Trigger>
+                            <Trigger SourceName="Thumb" Property="IsDragging" Value="true">
+                                <Setter Value="{DynamicResource DarkBrush}" TargetName="Thumb" Property="Background"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter TargetName="Thumb" Property="Visibility" Value="Collapsed"/>
+                            </Trigger>
+                            <Trigger Property="Orientation" Value="Horizontal">
+                                <Setter TargetName="GridRoot" Property="LayoutTransform">
+                                    <Setter.Value>
+                                        <RotateTransform Angle="90"/>
+                                    </Setter.Value>
+                                </Setter>
+                                <Setter TargetName="PART_Track" Property="LayoutTransform">
+                                    <Setter.Value>
+                                        <RotateTransform Angle="90"/>
+                                    </Setter.Value>
+                                </Setter>
+                                <Setter Property="Width" Value="Auto"/>
+                                <Setter Property="Height" Value="12"/>
+                                <Setter TargetName="Thumb" Property="Tag" Value="Horizontal"/>
+                                <Setter TargetName="PageDown" Property="Command" Value="ScrollBar.PageLeftCommand"/>
+                                <Setter TargetName="PageUp" Property="Command" Value="ScrollBar.PageRightCommand"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Page.Resources>
     <Grid x:Name="GridPage">
-        <Separator BorderBrush="Gray" Height="100" Margin="456,-27,574,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Separator BorderBrush="Gray" Height="100" Margin="454,-27,576,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Separator.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -107,6 +181,9 @@
                 </HierarchicalDataTemplate>
             </TreeView.Resources>
         </TreeView>
+        <ScrollViewer Margin="328,65,0,0">
+
+        </ScrollViewer>
         <ListView x:Name="ListViewMusic" Margin="328,46,2,0" Background="#262a30" Foreground="White">
             <ListView.View>
                 <GridView x:Name="GridViewMusic">
@@ -136,14 +213,14 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Margin="537,22,578,0" Name="bntAddList" Click="bntAddList_Click" Background="#2E333A" BorderThickness="0" VerticalAlignment="Top" VerticalContentAlignment="Center" RenderTransformOrigin="12.783,-11.5" Height="19">
-            <Image Source="../resources/plus_icon.png" Height="15" Width="15"/>
+        <Button Margin="527,22,588,0" Name="bntAddList" Padding="-1" Click="bntAddList_Click" Background="#2E333A" BorderThickness="0" VerticalAlignment="Top" VerticalContentAlignment="Center" RenderTransformOrigin="12.783,-11.5" Height="19">
+            <Image Source="../resources/plus_icon.png" Height="19" Width="20"/>
         </Button>
         <TextBlock Margin="557,6,446,0" Foreground="White" VerticalAlignment="Top">Rechercher :</TextBlock>
         <TextBox x:Name="txtSearch" Template="{StaticResource TextBoxBaseControlTemplate}" FontSize="11" Background="#2E333A" VerticalContentAlignment="Center" HorizontalAlignment="Left" 
                  Height="19" Margin="557,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="386" RenderTransformOrigin="0.5,0.5"/>
-        <Button Margin="943,22,175,0" Name="btnSearchSong" Click="btnSearchSong_Click" Background="Gray" BorderThickness="0" VerticalAlignment="Top" VerticalContentAlignment="Center" RenderTransformOrigin="12.783,-11.5" Height="19">
-            <Image Source="../resources/fleche_droite.png" Height="19" Width="15"/>
+        <Button Margin="948,22,170,0" Name="btnSearchSong" Click="btnSearchSong_Click" Background="Transparent" Padding="-1" BorderThickness="0" VerticalAlignment="Top" VerticalContentAlignment="Center" RenderTransformOrigin="12.783,-11.5" Height="19">
+            <Image Source="../resources/entrer.png" Height="19" Width="17"/>
         </Button>
         <TextBox x:Name="txtDestination" Template="{StaticResource TextBoxBaseControlTemplate}" FontSize="11" VerticalContentAlignment="Center" Background="#2E333A" HorizontalAlignment="Left" 
             Height="19" Margin="10,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="387" RenderTransformOrigin="0.5,0.5"/>
