--- a/Spotival/visuals/ExplorerWindow.xaml
+++ b/Spotival/visuals/ExplorerWindow.xaml
@@ -10,25 +10,31 @@
       Title="ExplorerWindow">
     <Page.Resources>
         <Style TargetType="ListViewItem">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListViewItem}">
+                        <Border
+                         BorderBrush="#2E333A"
+                         BorderThickness="0,0,0,1"
+                         Background="{TemplateBinding Background}">
+                            <GridViewRowPresenter HorizontalAlignment="Stretch" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Width="Auto" Margin="0" Content="{TemplateBinding Content}"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
             <Setter Property="Background" >
                 <Setter.Value>
                     <SolidColorBrush Color="#262a30" Opacity="0.70"/>
                 </Setter.Value>
             </Setter>
-            <!--<Setter Property="BorderBrush" Value="Gray" />
-            <Setter Property="BorderThickness" Value="0, 0, 0, 1" />-->
-            <Setter Property="Padding" Value="5" />
             <Setter Property="Opacity" Value="40" />
+            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="Margin" Value="10"/>
             <Style.Triggers>
                 <Trigger Property="IsSelected" Value="true" >
                     <Setter Property="Foreground" Value="White" />
-                    <Setter Property="Background" Value="Gray" />
-                    <!--<Setter Property="BorderBrush" Value="Gray"/>-->
-                </Trigger>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Foreground" Value="White" />
-                    <Setter Property="Background" Value="Gray" />
-                    <!--<Setter Property="BorderBrush" Value="Gray"/>-->
+                    <Setter Property="Background" Value="#2E333A" />
+                    <Setter Property="BorderBrush" Value="#2E333A"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
@@ -181,9 +187,7 @@
                 </HierarchicalDataTemplate>
             </TreeView.Resources>
         </TreeView>
-        <ScrollViewer Margin="328,65,0,0">
-
-        </ScrollViewer>
+        <ScrollViewer Margin="328,65,0,0"/>
         <ListView x:Name="ListViewMusic" Margin="328,46,2,0" Background="#262a30" Foreground="White">
             <ListView.View>
                 <GridView x:Name="GridViewMusic">
@@ -207,7 +211,7 @@
                     </GridViewColumn>
                     <GridViewColumn Header="Titre" DisplayMemberBinding="{Binding Titre}" Width="270"/>
                     <GridViewColumn Header="Artiste" DisplayMemberBinding="{Binding Artiste}" Width="180"/>
-                    <GridViewColumn Header="Durée" DisplayMemberBinding="{Binding Durée}" Width="56"/>
+                    <GridViewColumn Header="Durée" DisplayMemberBinding="{Binding Durée}" Width="60"/>
                     <GridViewColumn Header="BPM" DisplayMemberBinding="{Binding BPM}" Width="40"/>
                     <GridViewColumn Header="Localisation" DisplayMemberBinding="{Binding LocalisationFichier}"/>
                 </GridView>
