--- a/Spotival/visuals/ExplorerWindow.xaml
+++ b/Spotival/visuals/ExplorerWindow.xaml
@@ -9,6 +9,17 @@
       d:DesignHeight="800" d:DesignWidth="1135"
       Title="ExplorerWindow">
     <Page.Resources>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderThickness="0">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
         <Style TargetType="ListViewItem">
             <Setter Property="Template">
                 <Setter.Value>
@@ -17,7 +28,7 @@
                          BorderBrush="#2E333A"
                          BorderThickness="0,0,0,1"
                          Background="{TemplateBinding Background}">
-                            <GridViewRowPresenter HorizontalAlignment="Stretch" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Width="Auto" Margin="0" Content="{TemplateBinding Content}"/>
+                            <GridViewRowPresenter HorizontalAlignment="Stretch" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Width="Auto" Margin="10" Content="{TemplateBinding Content}"/>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
@@ -29,7 +40,6 @@
             </Setter>
             <Setter Property="Opacity" Value="40" />
             <Setter Property="FontSize" Value="13"/>
-            <Setter Property="Margin" Value="10"/>
             <Style.Triggers>
                 <Trigger Property="IsSelected" Value="true" >
                     <Setter Property="Foreground" Value="White" />
@@ -204,7 +214,7 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <Button BorderThickness="0" Background="Transparent" x:Name="btnLaunchMusic" Click="btnLaunchMusic_Click">
-                                    <Image Width="20" Source="../resources/play_icon_final.png"/>
+                                    <Image Width="20" Source="../resources/play.png"/>
                                 </Button>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
@@ -213,7 +223,7 @@
                     <GridViewColumn Header="Artiste" DisplayMemberBinding="{Binding Artiste}" Width="180"/>
                     <GridViewColumn Header="Durée" DisplayMemberBinding="{Binding Durée}" Width="60"/>
                     <GridViewColumn Header="BPM" DisplayMemberBinding="{Binding BPM}" Width="40"/>
-                    <GridViewColumn Header="Localisation" DisplayMemberBinding="{Binding LocalisationFichier}"/>
+                    <GridViewColumn Header="Localisation" DisplayMemberBinding="{Binding LocalisationFichier}" Width="500"/>
                 </GridView>
             </ListView.View>
         </ListView>
